# xpla

./: .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  host_functions.py  index.html  learningactivity.js  package-lock.json  package.json  pyproject.toml  quiz.js  server.py  test_server.py
.agents/skills/pxc-build-activity/: SKILL.md
.agents/skills/xpla-build-activity/: SKILL.md
activities/math-backend/: plugin.d.ts  plugin.js
activities/quiz-demo/: index.html
docs/: claude_research_learning_activities.md  research-elearning-standards.md
examples/: index.html
requirements/: base.in  dev.in
samples/: README.md
samples/chat/: Makefile  client.js  manifest.json  sandbox.js  server.js  ui.js  xpla.wit
samples/collab-editor/: Makefile  client.js  manifest.json  package-lock.json  package.json  sandbox.js  server.js  ui.js
samples/flappy-bird/: Makefile  manifest.json  pxc.wit  sandbox.js  ui.js  xpla.wit
samples/helloworld/: manifest.json  ui.js
samples/image/: Makefile  client.js  manifest.json  sandbox.js  server.js  ui.js  xpla.wit
samples/interactive-video/: Makefile  manifest.json  sandbox.js  server.js  ui.js
samples/markdown/: Makefile  Makefile.bak  client.js  manifest.json  package-lock.json  server.js  server.py  xpla.wit
samples/math/: Makefile  activity.html  activity.js  client.js  index.html  manifest.json  pxc.wit  sandbox.js  server.js  ui.js  xpla.wit
samples/math-backend/: activity.js  manifest.json
samples/math/src/: sandbox.d.ts  sandbox.js
samples/mcq/: Makefile  activity.js  client.js  manifest.json  sandbox.js  server.js  ui.js
samples/mcq/src/: sandbox.d.ts  sandbox.js
samples/python/: Makefile  client.js  manifest.json  package-lock.json  package.json  sandbox.js  server.js  ui.js
samples/quiz/: Makefile  activity.html  activity.js  client.js  manifest.json  ui.js
samples/quiz-demo/: manifest.json
samples/scorm/: Makefile  client.js  manifest.json  package-lock.json  package.json  pxc.wit  sandbox.js  server.js  xpla.wit
samples/slideshow/: Makefile  client.js  manifest.json  package-lock.json  package.json  pxc.wit  sandbox.js  server.js
samples/video/: Makefile  client.js  manifest.json  package-lock.json  package.json  sandbox.js  server.js
samples/youtube/: client.js  manifest.json  sandbox.js  server.js  ui.js
samples/zoom/: Makefile  manifest.json  pxc.wit  sandbox.js  server.js  ui.js  xpla.wit
server/: __init__.py  __main__.py  app.py  host_functions.py  runtime.py
src/lib/: learningactivity.js
src/pxc/demo/: AGENTS.md  README.md  app.py  kv.py
src/pxc/lib/: README.md  actions.py  capabilities.py  event_bus.py  events.py  field_store.py  fields.py  manifest_types.py  permission.py  runtime.py  sandbox.py
src/pxc/lti/: README.md  __main__.py  app.py  config.py  integration.py
src/pxc/notebook/: AGENTS.md  README.md  app.py  auth.py  (+5 more)
src/sandbox-lib/: index.js  manifest.schema.json  sandbox.d.ts
src/server/: __init__.py  __main__.py  app.py  capabilities.py  constants.py  host_functions.py  lms.py  runtime.py
src/tests/: conftest.py  test_actions.py  test_capabilities.py  test_context.py  test_event_bus.py  test_events.py  test_fields.py  test_server.py  test_streams.py  test_values.py
src/tools/: build_plugin.py  bundle_client.py  js2wasm.py  validate_manifest.py
src/xpla/: README.md  actions.py  capabilities.py  context.py  event_bus.py  events.py  field_store.py  fields.py  kv.py  sandbox.py
src/xplademo/: README.md  app.py  constants.py  kv.py
src/xpln/: README.md  app.py  constants.py  db.py  field_store.py  models.py
tests/: test_server.py
tools/: build_plugin.py
(+254 files in other folders)
