[project]
name = "xpla-demo"
version = "0.1.0"
dependencies = [
    "alembic",
    "fastapi[standard]",
    "jinja2",
    "jsonschema",
    "sqlmodel",
    "uvicorn[standard]",
    "wasmtime",
    # for markdown activity
    "markdown",
    "componentize-py",
]

[project.optional-dependencies]
dev = [
    "black",
    "datamodel-code-generator",
    "httpx",
    "mypy",
    "pylint",
    "pytest",
    "types-markdown",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint.MAIN]
ignore-paths=["src/xpla/notebook/frontend"]

[tool.pylint.'MESSAGES CONTROL']
disable=[
    "duplicate-code",
    "fixme",
    "invalid-name",
    "line-too-long",
    "missing-docstring",
    "too-few-public-methods",
    "too-many-public-methods",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-positional-arguments",
]

[tool.mypy]
plugins = ['pydantic.mypy']
warn_unused_configs = true
ignore_missing_imports = true
strict = true
exclude = ["src/xpla/notebook/frontend"]

[tool.black]
extend-exclude = "src/xpla/notebook/frontend"
